--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
         .easter-egg-modal.hidden .glass-card { transform: scale(0.95); opacity: 0; }
         #easter-egg-trigger { cursor: pointer; text-decoration: underline; text-decoration-style: dotted; }
     </style>
+    <meta name="google-site-verification" content="b24GTvphvuIEoCNhAIFhaKmLFW9iajGoywVL9OpAJ4Q" />
 </head>
 <body class="antialiased relative overflow-x-hidden">
 
