--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         #easter-egg-trigger { cursor: pointer; text-decoration: underline; text-decoration-style: dotted; }
     </style>
     <!-- === ВАЖНЫЙ SEO-ТЕГ ВОЗВРАЩЕН НА МЕСТО === -->
-    
+ <meta name="google-site-verification" content="b24GTvphvuIEoCNhAIFhaKmLFW9iajGoywVL9OpAJ4Q" />   
 </head>
 <body class="antialiased relative overflow-x-hidden">
 
